--- a/springbootwebapp/Jenkinsfile
+++ b/springbootwebapp/Jenkinsfile
@@ -3,7 +3,7 @@ agent any
 stages { 
 stage('compile') { 
 steps { 
-sh 'mvn --file springbootwebapp/pom.xml -DskipTests clean package' 
+sh 'mvn pom.xml -DskipTests clean package' 
 } 
 } 
 stage('deploy') { 
